# yggdrasil

./: .gitignore  Cargo.toml  README.md
yggdrasil_affaliate/: Cargo.toml
yggdrasil_affaliate/migration/: Cargo.toml
yggdrasil_affaliate/migration/src/: m20220101_000001_create_table.rs
yggdrasil_affaliate/src/: event_handler.rs
yggdrasil_affaliate/src/repository/: affiliate_graph.rs  mod.rs
yggdrasil_affaliate_module/: Cargo.toml
yggdrasil_affaliate_module/src/: lib.rs
yggdrasil_affaliate_module/src/repository/: affiliate_statistics.rs
yggdrasil_auth/: Cargo.toml
yggdrasil_auth/migration/src/: m20220101_000001_create_table.rs
yggdrasil_auth/src/: lib.rs  password_hash.rs
yggdrasil_auth/src/auth_provider/: mod.rs
yggdrasil_auth/src/repository/: inner_email_provider.rs  mod.rs
yggdrasil_auth_module/: Cargo.toml
yggdrasil_auth_module/src/auth_provider/: inner_email_provider.rs
yggdrasil_auth_module/src/repository/: user_auth_pair.rs
yggdrasil_schedule/: Cargo.toml
yggdrasil_schedule/migration/src/: m20220101_000001_create_table.rs
yggdrasil_schedule_module/: Cargo.toml
yggdrasil_schedule_module/src/repository/: mod.rs  scheduled_event.rs
yggdrasil_shop_module/: Cargo.toml
yggdrasil_shop_module/src/: event_handler.rs  lib.rs
yggdrasil_tiny_shop/: Cargo.toml
yggdrasil_tiny_shop/migration/src/: m20220101_000001_create_table.rs
yggdrasil_tiny_shop/src/repository/: mod.rs  production.rs
