[workspace]
members = [
    "yggdrasil_tiny_shop",
    "yggdrasil_affaliate",
    "yggdrasil_auth",
    "yggdrasil_schedule"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1.10", features = ["serde", "v4"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

[workspace.dependencies.sea-orm]
version = "1.0.0-rc.5"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "postgres-array",
    "with-rust_decimal",
    "mock"
]